--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "test": "NODE_ENV=test tap test/unit/*.js"
   },
   "keywords": [
-    "mdb"
+    "mdb",
+    "apex7000",
+    "bill acceptor"
   ]
 }
